# Chess-Engine-JBEngine

./: .gitignore  .gitmodules  CMakeLists.txt  attacks.cpp  attacks.h  bitboard.cpp  bitboard.h  eval.cpp  eval.h  jacea_nnue.hpp  main.cpp  move.h  movegenerator.h  position.cpp  position.h  random.h  search.cpp  search.h  transpositiontable.cpp  transpositiontable.h  types.h  uci.cpp  uci.h  utility.h
nnue/: misc.cpp  misc.h
src/: attacks.h  bitboard.cpp  bitboard.h  eval.cpp  eval.h  jacea_nnue.hpp  main.cpp  movegenerator.cpp  random.h  search.cpp  search.h  transpositiontable.cpp  transpositiontable.h  types.h  uci.cpp  uci.h  utility.h
syzygy/: tbcore.cpp  tbprobe.cpp
